--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             {% for gallery in galleries %}
             <tr>
                     <td>{{ gallery.eid }}</td>
-                    <td><a href="{{ url_for('gallery', id = gallery.eid) }}">{{ gallery.name }}</a></td>
+                    <td><a href="{{ url_for('gallery', id = gallery.eid) }}">{{ gallery.title }}</a></td>
                     <td>actions</td>
             </tr>
             {% endfor %}
