--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -10,8 +10,8 @@
             <tr>
                     <td>{{ file.eid }}</td>
                     <td>
-                            <a href="{{ url_for('image', file_id = file.eid) }}">
-                                    <img src="{{ file.file_id }}" alt="{{ file.file_id }}">
+                            <a href="{{ url_for('image', file_id = file.eid ) }}">
+                                    <img src="{{ url_for('thumb', file_id = file.eid )}}" alt="{{ file.file_id }}">
                             </a>
                     </td>
                     <td>actions</td>
