--- a/templates/form.html
+++ b/templates/form.html
@@ -4,6 +4,7 @@
         <h2 class="form-signin-heading">Add/Edit</h2>
         {% for key, value in form.items() %}
         <label for="{{ key }}" class="sr-only">{{ key }}</label>
+        {{ key }}
         <input value="{{ value }}" name="{{ key }}" type="text" id="{{ key }}" class="form-control" placeholder="{{ key }}" required autofocus>
         {% endfor %}
 
