--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-<h1>{{ gallery.name }}</h1>
+<h1>{{ gallery.title }}</h1>
 <div class="table-responsive">
     <table class="table">
             <tr>
