--- a/templates/form.html
+++ b/templates/form.html
@@ -1,13 +1,64 @@
 {% extends "base.html" %}
 {% block body %}
+<script type="text/javascript">
+    $(document).ready(function() {
+        var i = 0;
+        function addField(i) {
+            var extra_field = '<div class="form-group" id="extra_field_' + i + '">' +
+            '<div class="col-sm-2">' + 
+            '<input type="text" placeholder="Name" value="" id="extra_name_' + i + '" class="form-control extra_fields extra_name"/>' +
+            '</div>' +
+            '<div class="col-sm-10">' +
+            '<input type="text" placeholder="Value" value="" id="extra_value_' + i + '" class="form-control extra_fields extra_value"/>' +
+            '</div></div>';
+            return extra_field;
+        }
+        function bind() {
+            $('#extra-fields .extra_fields').bind('input', function(){
+                var fields = $('#extra-fields .extra_name');
+                for (i=0; i<fields.length; i++) {
+                        $('#' + fields[i].id.replace('extra_name', 'extra_value')).attr('name', fields[i].value)
+                }});                     
+        }
+        $('#add-fields-btn').click(function() {
+            $('#extra-fields').append(addField(i));
+            bind();
+            i++;
+        });
+
+        function addDeleteAttr(name) {
+                return '<input type="hidden" name="_deleted_args" value="' + name +'"/>';
+        }
+        $('.btn-delete-attr').click(function(){
+            $('#deleted-fields').append(addDeleteAttr($('#' + this.id.replace('btn_delete_arg', 'input')).attr('name')));
+            $('#' + this.id.replace('btn_delete_arg', 'div_input')).remove();
+        });
+
+        $('.btn-clear-attr').click(function(){
+            $('#' + this.id.replace('btn_clear_arg', 'input')).val('');
+        });
+    });
+</script>
 <form class="form-signin" method="post" action="">
         <h2 class="form-signin-heading">Add/Edit</h2>
         {% for key, field in form.items() %}
-        <label for="{{ key }}" class="sr-only">{{ key }}</label>
-        {{ key }}
-        <input value="{{ field.value }}" name="{{ key }}" type="text" id="{{ key }}" class="form-control" placeholder="{{ key }}"{% if field.required == True %} required{% endif %} autofocus>
+        <div id="div_input_{{ key }}" class="input-group">
+            <label for="input_{{ key }}">{{ key }}:</label>
+            <input value="{{ field.value }}" name="{{ key }}" type="text" id="input_{{ key }}" class="form-control" placeholder="{{ key }}"{% if field.required == True %} required{% endif %} autofocus>
+            <span class="input-group-btn">
+                <span id="btn_clear_arg_{{ key }}" class="btn btn-sm btn-warning btn-clear-attr">Clear</span>
+                <span id="btn_delete_arg_{{ key }}" class="btn btn-sm btn-danger btn-delete-attr">Delete</span>
+            </span>
+        </div>
         {% endfor %}
 
+        <div class="form-group">
+                <div class="col-sm-offset-2 col-sm-10">
+                        <span class="btn btn-success" id="add-fields-btn">+ extra fields</span>
+                </div>
+        </div>
+        <div id="extra-fields"></div>
+        <div id="deleted-fields"></div>
         <div class="btn-group btn-group-justified" role="group" aria-label="buttons">
                 <div class="btn-group" role="group">
                         <button name="submit" value="save" class="btn btn-lg btn-primary" type="submit">Save</button>
